<resources>
    <string name="app_name">FinalTask</string>
    <string name="Início">Início</string>
    <string name="Cardápios">Cardápios</string>
    <string name="Diário">Diário</string>
    <string name="Profile">Profile</string>
    <string name="Em_Gramas">Gramas</string>
    <string name="Peso">Peso</string>
    <string name="Peso_doisPontos">Peso:</string>
    <string name="Idade">Idade</string>
    <string name="Idade_doisPontos">Idade:</string>
    <string name="Nome">Nome</string>
    <string name="Nome_doisPontos">Nome:</string>
    <string name="Começar">Começar</string>
    <string name="Food">Food</string>
    <string name="Balance">Balance</string>
    <string name="Logo">Logo</string>
    <string name="Login">Login:</string>
    <string name="Senha">Senha:</string>
    <string name="Refeição">Refeição:</string>
    <string name="Alimento">Alimento:</string>
    <string name="Porcao">Porção:</string>
    <string name="Calorias">Calorias:</string>
    <string name="Carboidratos">Carboidratos:</string>
    <string name="Proteinas">Proteinas:</string>
    <string name="Gorduras">Gorduras:</string>
    <string name="Refeição_hint">Preencha a refeicao</string>
    <string name="Alimento_hint">Preencha o alimento </string>
    <string name="Porcao_hint">Preencha a  quantidade</string>
    <string name="Calorias_hint">Preencha as Calorias</string>
    <string name="Carboidratos_hint">Preencha os Carboidratos</string>
    <string name="Proteinas_hint">Preencha as Proteinas</string>
    <string name="Gorduras_hint">Preencha as Gorduras</string>
    <string name="Zero">0g</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>