<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F543959F"
    tools:context=".AdicionarAlimentos"
    tools:visibility="visible">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="136dp"
        android:text="@string/Porcao"
        android:textColor="@color/roxo"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tableAlimentos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <EditText
        android:id="@+id/editTextPorcao"
        android:layout_width="249dp"
        android:layout_height="54dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Preencha a quantidade"
        android:textColor="#474444"
        app:layout_constraintBottom_toTopOf="@+id/tableAlimentos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:layout_constraintVertical_bias="0.529" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="72dp"
        android:text="@string/Alimento"
        android:textColor="@color/roxo"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tableAlimentos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <EditText
        android:id="@+id/editTextCarb"
        android:layout_width="249dp"
        android:layout_height="54dp"
        android:layout_marginTop="288dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Carboidratos_hint"
        android:textColor="#474444"
        app:layout_constraintBottom_toTopOf="@+id/tableAlimentos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:layout_constraintVertical_bias="0.529" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="384dp"
        android:text="@string/Proteinas"
        android:textColor="@color/roxo"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tableAlimentos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <EditText
        android:id="@+id/editTextCal"
        android:layout_width="249dp"
        android:layout_height="54dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Calorias_hint"
        android:textColor="#474444"
        app:layout_constraintBottom_toTopOf="@+id/tableAlimentos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:layout_constraintVertical_bias="0.529" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="212dp"
        android:text="@string/Calorias"
        android:textColor="@color/roxo"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tableAlimentos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="484dp"
        android:text="@string/Gorduras"
        android:textColor="@color/roxo"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tableAlimentos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <EditText
        android:id="@+id/editTextAlimento"
        android:layout_width="249dp"
        android:layout_height="54dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Preencha o alimento"
        android:textColor="#474444"
        app:layout_constraintBottom_toTopOf="@+id/tableAlimentos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:layout_constraintVertical_bias="0.529" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="304dp"
        android:text="@string/Carboidratos"
        android:textColor="@color/roxo"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tableAlimentos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <EditText
        android:id="@+id/editTextFat"
        android:layout_width="249dp"
        android:layout_height="54dp"
        android:layout_marginTop="468dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Gorduras_hint"
        android:textColor="#474444"
        app:layout_constraintBottom_toTopOf="@+id/tableAlimentos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:layout_constraintVertical_bias="0.529" />

    <EditText
        android:id="@+id/editTextProt"
        android:layout_width="249dp"
        android:layout_height="54dp"
        android:layout_marginTop="372dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Proteinas_hint"
        android:textColor="#474444"
        app:layout_constraintBottom_toTopOf="@+id/tableAlimentos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:layout_constraintVertical_bias="0.529" />

    <Button
        android:id="@+id/Adicionar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginLeft="147dp"
        android:layout_marginEnd="147dp"
        android:layout_marginRight="147dp"
        android:layout_marginBottom="60dp"
        android:text="Adicionar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableAlimentos" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginLeft="98dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:text="Adicionar Alimentos"
        android:textColor="@color/roxo"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/exitButton"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/exitButton"
        android:layout_width="81dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:background="#F543959F"
        android:contentDescription="sair desta aba"
        android:onClick="OnExit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_dialog" />


</androidx.constraintlayout.widget.ConstraintLayout>